text in me project card gezet

--- a/index.html
+++ b/index.html
@@ -46,11 +46,9 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h2 class="section-title">Welkom op mijn Portfolio</h2>
+                    <h2 class="section-title">Welkom op mijn Portfolio!!</h2>
                     <p class="hero-text">
-                        Hallo! Ik ben Kasjah Houben, een ambitieuze ontwikkelaar en designer.
-                        Op deze website kun je meer over mij leren en mijn projecten bekijken.
-                        Ik ben gepassioneerd over het creëren van mooie en functionele webapplicaties.
+                        Hallo! Ik ben Kasjah Houben, Ik ben 19 en hou van creatief bezig zijn.
                     </p>
                     <button class="btn btn-primary">Contact Me</button>
                 </div>
@@ -65,10 +63,13 @@
     <!-- Section 2: About Me Section (Foto links, Tekst rechts) -->
     <section id="about" class="about-section py-5 bg-light">
         <div class="container">
-            <h2 class="section-title text-center mb-5">Over Mij</h2>
+            <h2 class="section-title text-center mb-5">Over Mij 𐔌՞. .՞ 𐦯</h2>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <img src="https://via.placeholder.com/350x350" alt="Over Mij" class="img-fluid rounded">
+                    <img class="img-fluid rounded"  src="assets/me.jpg"
+                                                                              alt="foto van Kasjah Houben"
+                />
+
                 </div>
                 <div class="col-lg-6">
                     <p class="about-text">
@@ -93,13 +94,16 @@
                 <!-- Project 1 -->
                 <div class="col-lg-4 col-md-6">
                     <article class="project-card">
-                        <img src="" alt="Project 1" class="project-image"><img src="assets/gumbo.jpg" alt="foto van jaguar etalage" height="400"
-                                                                               width="400"/>
+                        <img src="assets/gumbo.jpg"
+                                                                               alt="foto van jaguar etalage"/>
                         <div class="project-content">
-                            <h3 class="etalage/crafts ">Project 1</h3>
+                            <h3 class="etalage/crafts ">Decor & Etalage</h3>
                             <p class="project-description">
-                                Een interactieve webapplicatie gemaakt met HTML, CSS en JavaScript.
-                                Dit project toont mijn basisvaardigheden in web development.
+                                "Gumbo" zoals ik de jaguar noem was mijn eindwerk voor etalage en wat een werk het was.
+                                onze opdracht moest een "chique"
+                                etalage zijn met de kleuren: Zwart,goud, zilver ezv. In het verleden heb ik al een werk
+                                gemaakt ivb met een parfumflesje.
+                                Gumbo bestaat uit 5000 handgeplaatste steentjes Ik heb hier 252uur aan gewerkt.
                             </p>
                             <a href="#" class="btn btn-sm btn-outline-primary">Meer Info</a>
                         </div>
@@ -108,13 +112,17 @@
                 <!-- Project 2 -->
                 <div class="col-lg-4 col-md-6">
                     <article class="project-card">
-                        <img src="" alt="Project 2" class="project-image"><img src="assets/menno.jpg" alt="tekening van menno" height="547"
-                                                                               width="546"/>
+                        <img src="assets/menno.jpg"
+                                                                               alt="tekening van menno"/>
                         <div class="project-content">
-                            <h3 class="animation">Project 2</h3>
+                            <h3 class="animation">Illustratie</h3>
                             <p class="project-description">
-                                Een responsive website ontworpen met Bootstrap. Dit project demonstreert
-                                mijn kennis van moderne CSS frameworks en responsive design.
+                                Illustratie is altijd mijn lievelings vak geweest.
+                                Ik stak de tijd meestal in het ontwerpen voor nieuwe karakters voor mijn indie animatie
+                                serie.
+                                Menno is mijn meest populairste karakter met nu al zijn eigen fanbase. (karakter
+                                vertoond op foto)
+
                             </p>
                             <a href="#" class="btn btn-sm btn-outline-primary">Meer Info</a>
                         </div>
@@ -123,13 +131,16 @@
                 <!-- Project 3 -->
                 <div class="col-lg-4 col-md-6">
                     <article class="project-card">
-                        <img src="" alt="Project 3" class="project-image"><img src="assets/me.jpg" alt="foto van Kasjah Houben" height="828"
-                                                                               width="827"/>
+                        <img
+                            src="assets/Schermopname_13-1-2026_185727_www.facebook.com.jpeg" alt="foto van spreker"/>
                         <div class="project-content">
-                            <h3 class="project-title">Project 3</h3>
+                            <h3 class="project-title">We Are</h3>
                             <p class="project-description">
-                                Een dynamische applicatie met API-integratie. Dit project toont mijn
-                                gevorderde JavaScript-vaardigheden en API-integratie kennis.
+                                Voor mijn eindjaar op de Wico Campus Overpelt
+                                hebben we een webshop moeten organiseren met onze eigen ontwerpen. dit vond ik de
+                                perfecte optie om mensen te tonen aan mijn karakters van mijn serie.
+                                Met groot succes Heeft mijn Menno Etalage/illustraties veel mensen kunnen aantrekken en
+                                word Menno daar nog gebruikt als inspiratie voor nieuwe studenten.
                             </p>
                             <a href="#" class="btn btn-sm btn-outline-primary">Meer Info</a>
                         </div>
@@ -165,33 +176,32 @@
                 <!-- Fact 1 -->
                 <div class="col-lg-4 col-md-6">
                     <div class="fact-card">
-                        <div class="fact-icon">🎓</div>
-                        <h3 class="fact-title">Dedicated Learner</h3>
+                        <div class="fact-icon">(ദ്ദി˙ᗜ˙)</div>
+                        <h3 class="fact-title">STAGES</h3>
                         <p class="fact-description">
-                            Ik ben altijd bezig met het leren van nieuwe technologieën en het verbeteren
-                            van mijn programmeervaardigheden.
+                            Ik heb een erg positieve werkervaring gehad bij Stad Hasselt als grafisch ontwerper
                         </p>
                     </div>
                 </div>
                 <!-- Fact 2 -->
                 <div class="col-lg-4 col-md-6">
                     <div class="fact-card">
-                        <div class="fact-icon">💼</div>
-                        <h3 class="fact-title">Problem Solver</h3>
+                        <div class="fact-icon">(๑ᵔ⤙ᵔ๑)</div>
+                        <h3 class="fact-title">TATTOO</h3>
                         <p class="fact-description">
-                            Ik geniet ervan om complexe problemen op te lossen en creatieve oplossingen
-                            te vinden voor uitdagende taken.
+                            In mijn vrije tijd probeer ik steeds nieuwe creative dingen uit en zet ik Tattoo's met mijn
+                            mama
                         </p>
                     </div>
                 </div>
                 <!-- Fact 3 -->
                 <div class="col-lg-4 col-md-6">
                     <div class="fact-card">
-                        <div class="fact-icon">🚀</div>
-                        <h3 class="fact-title">Innovatie Focus</h3>
+                        <div class="fact-icon">( ˶ˆᗜˆ˵)</div>
+                        <h3 class="fact-title">HTTYD </h3>
                         <p class="fact-description">
-                            Ik ben enthousiast over het werken met moderne technologieën en het creëren
-                            van innovatieve digitale ervaringen.
+                            sinds ik 6 was ben ik al een grote fan van How to train your dragon, ik heb nu al 300+ aan
+                            merch
                         </p>
                     </div>
                 </div>
@@ -207,7 +217,6 @@
         <p>&copy; 2026 Kasjah Houben. Alle rechten voorbehouden.</p>
     </div>
 </footer>
-
 
 
 </body>
