Portfolio afgemaakt. extra pagina met eindreflectie toegevoegd, Privacy beleid aangemaakt en bron vermelding aangemaakt.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#projects">Projecten</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#facts">Feiten</a>
+
+                    </li>
                 </ul>
             </div>
         </div>
@@ -48,7 +52,13 @@
                 <div class="col-lg-6">
                     <h2 class="section-title">Welkom op mijn Portfolio!!</h2>
                     <p class="hero-text">
-                        Hallo! Ik ben Kasjah Houben, Ik ben 19 en hou van creatief bezig zijn.
+                        Hallo! Ik ben Kasjah Houben, een <strong>student Digitale vormgever</strong> aan de hogeschool
+                        PXL in Hasselt.
+                        Ik ben 19 en afkomstig uit Bocholt.
+                        Ik ben een creatieve en
+                        gedreven individu met een passie voor design. Op deze portfolio website deel ik
+                        mijn projecten, vaardigheden en ervaringen. Neem gerust een kijkje rond en voel je vrij om
+                        contact met mij op te nemen voor samenwerkingen of vragen.
                     </p>
                     <button class="btn btn-primary">Contact Me</button>
                 </div>
@@ -66,20 +76,31 @@
             <h2 class="section-title text-center mb-5">Over Mij 𐔌՞. .՞ 𐦯</h2>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <img class="img-fluid rounded"  src="assets/me.jpg"
-                                                                              alt="foto van Kasjah Houben"
-                />
+                    <img class="img-fluid rounded" src="assets/me.jpg"
+                         alt="foto van Kasjah Houben"
+                    />
 
                 </div>
                 <div class="col-lg-6">
+
+                    <!--Korte voorstelling (wie ben je, wat maakt je speciaal, algemene gegevens, ...)
+Waarom koos je voor de opleiding? Waarom ben je een goede designer/programmeur? ...
+Wees creatief! -->
+
                     <p class="about-text">
-                        Ik ben een passioneerde developer met ervaring in verschillende programmeren-talen
-                        en frameworks. Ik hou van het proces van het creëren van user-friendly interfaces en het
-                        schrijven van schone, onderhoudbare code.
+                        Ik ben een creatief persoon met boordevolle ideeën en een sterke oog op detail en esthetiek.
+                        Vanwege mij middelbare school ervaring in Decor etalage en publiciteit, heb ik een solide basis
+                        van al <strong>5 jaar in illustrator en indesign.</strong>
+                        verder nog leer ik ook nieuwe programma's zoals figma en programmeertalen zoals <strong>HTML,
+                        CSS en Javascript.</strong>
                     </p>
                     <p class="about-text">
-                        Mijn focus ligt op het leren en groeien als professioneel. Ik werk graag aan uitdagende
-                        projecten die mij helpen om mijn vaardigheden te verbeteren en nieuwe dingen bij te leren.
+                        Communicatie is bij mij een grote sterkte, ik werk graag samen in een team en sta open voor
+                        feedback om mijn werk te verbeteren.
+                        Ik ben altijd op zoek naar nieuwe uitdagingen en kansen om mijn vaardigheden verder te
+                        ontwikkelen en mijn passie voor design te delen met anderen.
+                        <br>
+                      <strong> Nederlands en Engels talig </strong>
                     </p>
                 </div>
             </div>
@@ -94,8 +115,8 @@
                 <!-- Project 1 -->
                 <div class="col-lg-4 col-md-6">
                     <article class="project-card">
-                        <img src="assets/gumbo.jpg"
-                                                                               alt="foto van jaguar etalage"/>
+                        <img id="gumbo" class="project-image" src="assets/gumbo.jpg"
+                             alt="foto van jaguar etalage"/>
                         <div class="project-content">
                             <h3 class="etalage/crafts ">Decor & Etalage</h3>
                             <p class="project-description">
@@ -105,15 +126,15 @@
                                 gemaakt ivb met een parfumflesje.
                                 Gumbo bestaat uit 5000 handgeplaatste steentjes Ik heb hier 252uur aan gewerkt.
                             </p>
-                            <a href="#" class="btn btn-sm btn-outline-primary">Meer Info</a>
+                            <a href="#" class="btn btn-sm btn-outline-primary toggle-description">Meer Info</a>
                         </div>
                     </article>
                 </div>
                 <!-- Project 2 -->
                 <div class="col-lg-4 col-md-6">
                     <article class="project-card">
-                        <img src="assets/menno.jpg"
-                                                                               alt="tekening van menno"/>
+                        <img class="project-image" src="assets/menno.jpg"
+                             alt="tekening van menno"/>
                         <div class="project-content">
                             <h3 class="animation">Illustratie</h3>
                             <p class="project-description">
@@ -121,18 +142,19 @@
                                 Ik stak de tijd meestal in het ontwerpen voor nieuwe karakters voor mijn indie animatie
                                 serie.
                                 Menno is mijn meest populairste karakter met nu al zijn eigen fanbase. (karakter
-                                vertoond op foto)
+                                getoond op foto). Het is altijd mijn droom geweest om films te maken en andere te insireren met mijn creaties. Net als hoe films dat voor mij deden.
 
                             </p>
-                            <a href="#" class="btn btn-sm btn-outline-primary">Meer Info</a>
+                            <a href="#" class="btn btn-sm btn-outline-primary toggle-description">Meer Info</a>
                         </div>
                     </article>
                 </div>
                 <!-- Project 3 -->
                 <div class="col-lg-4 col-md-6">
                     <article class="project-card">
-                        <img
-                            src="assets/Schermopname_13-1-2026_185727_www.facebook.com.jpeg" alt="foto van spreker"/>
+                        <img class="project-image"
+                                src="assets/Schermopname_13-1-2026_185727_www.facebook.com.jpeg"
+                                alt="foto van spreker"/>
                         <div class="project-content">
                             <h3 class="project-title">We Are</h3>
                             <p class="project-description">
@@ -142,25 +164,25 @@
                                 Met groot succes Heeft mijn Menno Etalage/illustraties veel mensen kunnen aantrekken en
                                 word Menno daar nog gebruikt als inspiratie voor nieuwe studenten.
                             </p>
-                            <a href="#" class="btn btn-sm btn-outline-primary">Meer Info</a>
+                            <a href="#" class="btn btn-sm btn-outline-primary toggle-description">Meer Info</a>
                         </div>
                     </article>
                 </div>
                 <!-- Project 4 -->
                 <div class="col-lg-4 col-md-6">
                     <article class="project-card">
-                        <img src="https://via.placeholder.com/300x200" alt="Project 4" class="project-image">
+                        <img src="assets/Untitled-3.jpg" alt="Project 4" class="project-image"/>
                         <div class="project-content">
-                            <h3 class="project-title">Project 4</h3>
+                            <h3 class="project-title">Graphic Skills</h3>
                             <p class="project-description">
-                                Voeg hier je projectbeschrijving in. Dit project laat zien wat je hebt gemaakt
-                                en welke technologieën je hebt gebruikt.
+                                Tijdens mijn stages bij Stad Hasselt heb ik mijn grafische vaardigheden kunnen
+                                verbeteren door te werken aan diverse projecten zoals flyers, posters en digitale
+                                content voor sociale media.
+                                Deze ervaringen hebben me geholpen om mijn ontwerpvaardigheden aan te scherpen en
+                                praktijkervaring op te doen in een professionele omgeving.
                             </p>
-                            <p class="project-url">
-                                <strong>Website:</strong> <a href="https://jouw-website.com" target="_blank"
-                                                             class="url-link">https://jouw-website.com</a>
-                            </p>
-                            <a href="#" class="btn btn-sm btn-outline-primary">Meer Info</a>
+
+                            <a href="#" class="btn btn-sm btn-outline-primary toggle-description">Meer Info</a>
                         </div>
                     </article>
                 </div>
@@ -174,7 +196,7 @@
             <h2 class="section-title text-center mb-5">Feiten Over Mij</h2>
             <div class="row g-4 text-center">
                 <!-- Fact 1 -->
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="fact-card">
                         <div class="fact-icon">(ദ്ദി˙ᗜ˙)</div>
                         <h3 class="fact-title">STAGES</h3>
@@ -184,7 +206,7 @@
                     </div>
                 </div>
                 <!-- Fact 2 -->
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="fact-card">
                         <div class="fact-icon">(๑ᵔ⤙ᵔ๑)</div>
                         <h3 class="fact-title">TATTOO</h3>
@@ -195,7 +217,7 @@
                     </div>
                 </div>
                 <!-- Fact 3 -->
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <div class="fact-card">
                         <div class="fact-icon">( ˶ˆᗜˆ˵)</div>
                         <h3 class="fact-title">HTTYD </h3>
@@ -203,6 +225,17 @@
                             sinds ik 6 was ben ik al een grote fan van How to train your dragon, ik heb nu al 300+ aan
                             merch
                         </p>
+                    </div>
+                </div>
+                <!-- Fact 4 (New) -->
+                <div class="col-lg-3 col-md-6">
+                    <div class="fact-card">
+                        <div class="fact-icon">✩</div>
+                        <h3 class="fact-title">Meer</h3>
+                        <p class="fact-description">
+                            Ontdek meer over mijn werk en ervaringen op een aparte pagina.
+                        </p>
+                        <a href="meer.html" target="_blank" class="fact-link" aria-label="Meer over mijn werk">Bekijk pagina</a>
                     </div>
                 </div>
             </div>
@@ -215,6 +248,7 @@
 <footer class="footer bg-dark text-white text-center py-4">
     <div class="container">
         <p>&copy; 2026 Kasjah Houben. Alle rechten voorbehouden.</p>
+        <p><a href="privacy.txt">Privacy beleid</a></p>
     </div>
 </footer>
 
