Uit werking final feedback docenten

--- a/index.html
+++ b/index.html
@@ -186,6 +186,37 @@ Wees creatief! -->
                         </div>
                     </article>
                 </div>
+                <!-- Project 5 (Blank) -->
+                <div class="col-lg-4 col-md-6">
+                    <article class="project-card">
+                        <img src="assets/612984522_2058214901467880_1261969771172807410_n.jpg" alt="Project 5" class="project-image"/>
+                        <div class="project-content">
+                            <h3 class="project-title">Stad Hasselt</h3>
+                            <p class="project-description">
+                                Stage lopen is altijd spanned.
+                                gelukkig verwelkomde Stad Hasselt mij met open armen. Ik heb er veel geleerd over teamwork en communicatie.
+                                Ik heb er ook mijn grafische vaardigheden kunnen verbeteren door te werken aan diverse projecten zoals flyers en media
+                            </p>
+
+                            <a href="#" class="btn btn-sm btn-outline-primary toggle-description">Meer Info</a>
+                        </div>
+                    </article>
+                </div>
+                <!-- Project 6 (Blank) -->
+                <div class="col-lg-4 col-md-6">
+                    <article class="project-card">
+                        <img src="assets/tattoo-final.png" alt="Project 6" class="project-image"/>
+                        <div class="project-content">
+                            <h3 class="project-title">Tattoo</h3>
+                            <p class="project-description">
+                                Ik en mijn mama zijn samen begonnen met het ontwerpen van een tattoo. De tattoo vertooned hierboven is gezet door 16jarige ik.
+                                 Het symboliseert kracht, vrijheid en transformatie, waarden die ik hoog in het vaandel draag.
+                            </p>
+
+                            <a href="#" class="btn btn-sm btn-outline-primary toggle-description">Meer Info</a>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
     </section>
@@ -199,9 +230,9 @@ Wees creatief! -->
                 <div class="col-lg-3 col-md-6">
                     <div class="fact-card">
                         <div class="fact-icon">(ദ്ദി˙ᗜ˙)</div>
-                        <h3 class="fact-title">STAGES</h3>
+                        <h3 class="fact-title">Cosplay</h3>
                         <p class="fact-description">
-                            Ik heb een erg positieve werkervaring gehad bij Stad Hasselt als grafisch ontwerper
+                            Props en crafts is compleet mijn ding. Door cosplay leer ik met ander materialen werken en veel fijne mensen kennen.
                         </p>
                     </div>
                 </div>
@@ -209,10 +240,9 @@ Wees creatief! -->
                 <div class="col-lg-3 col-md-6">
                     <div class="fact-card">
                         <div class="fact-icon">(๑ᵔ⤙ᵔ๑)</div>
-                        <h3 class="fact-title">TATTOO</h3>
+                        <h3 class="fact-title">Vloggen</h3>
                         <p class="fact-description">
-                            In mijn vrije tijd probeer ik steeds nieuwe creative dingen uit en zet ik Tattoo's met mijn
-                            mama
+                            Mensen vragen mij vakker hoe ik tewerk ga waardoor ik ben gaan beginnen vloggen. Het is niet voor fame enkel plezier en hulp!
                         </p>
                     </div>
                 </div>
@@ -222,8 +252,8 @@ Wees creatief! -->
                         <div class="fact-icon">( ˶ˆᗜˆ˵)</div>
                         <h3 class="fact-title">HTTYD </h3>
                         <p class="fact-description">
-                            sinds ik 6 was ben ik al een grote fan van How to train your dragon, ik heb nu al 300+ aan
-                            merch
+                            inds ik 6 was ben ik al een grote fan van How to train your dragon, ik heb nu al 300+ aan
+                            merch.
                         </p>
                     </div>
                 </div>
@@ -231,7 +261,7 @@ Wees creatief! -->
                 <div class="col-lg-3 col-md-6">
                     <div class="fact-card">
                         <div class="fact-icon">✩</div>
-                        <h3 class="fact-title">Meer</h3>
+                        <h3 class="fact-title">Eindreflectie</h3>
                         <p class="fact-description">
                             Ontdek meer over mijn werk en ervaringen op een aparte pagina.
                         </p>
